--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "bugs": {
     "url": "https://github.com/hpage24/node_fall22/issues"
   },
-  "homepage": "https://github.com/hpage24/node_fall22#readme",
+  "homepage": "https://todo-xkcd.onrender.com",
   "dependencies": {
     "axios": "^1.1.3",
     "body-parser": "^1.20.1",
